[gd_scene load_steps=53 format=3 uid="uid://1jvpb111lpne"]

[ext_resource type="Script" uid="uid://dp7t1nqvlrsm2" path="res://scripts/enemies/trash_monster.gd" id="1_qsv2k"]
[ext_resource type="Texture2D" uid="uid://blkr6fpxv2dft" path="res://assets/Textures/Characters/enemies/trash_monster/Trash Monster-Sprite V2.png" id="2_pj0d2"]
[ext_resource type="PackedScene" uid="uid://ixtob3sqmkdd" path="res://scenes/enemies/enemy_attack(skeleton).tscn" id="3_m2inh"]
[ext_resource type="Texture2D" uid="uid://rmkdxrtmu8tu" path="res://assets/Textures/UI/player_ui/bar1.png" id="4_mbbjy"]
[ext_resource type="Texture2D" uid="uid://chwt52ovgebel" path="res://assets/Textures/UI/player_ui/bars2.png" id="5_1uchj"]
[ext_resource type="Texture2D" uid="uid://cbwich8iag38r" path="res://assets/Textures/UI/player_ui/bar3.png" id="6_urrqu"]
[ext_resource type="Texture2D" uid="uid://c53umc5gfql5r" path="res://assets/Textures/UI/player_ui/bars4.png" id="7_orve7"]
[ext_resource type="FontFile" uid="uid://y3dgscraj716" path="res://assets/Fonts/WDXLLubrifontTC-Regular.ttf" id="8_yx7rf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m2inh"]
atlas = ExtResource("2_pj0d2")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbbjy"]
atlas = ExtResource("2_pj0d2")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uchj"]
atlas = ExtResource("2_pj0d2")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_urrqu"]
atlas = ExtResource("2_pj0d2")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_orve7"]
atlas = ExtResource("2_pj0d2")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx7rf"]
atlas = ExtResource("2_pj0d2")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmuph"]
atlas = ExtResource("2_pj0d2")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_irxc3"]
atlas = ExtResource("2_pj0d2")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bid1s"]
atlas = ExtResource("2_pj0d2")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaplb"]
atlas = ExtResource("2_pj0d2")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4rth"]
atlas = ExtResource("2_pj0d2")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hheg"]
atlas = ExtResource("2_pj0d2")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_300dh"]
atlas = ExtResource("2_pj0d2")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iccfl"]
atlas = ExtResource("2_pj0d2")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tjhs"]
atlas = ExtResource("2_pj0d2")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbkbe"]
atlas = ExtResource("2_pj0d2")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_80ksq"]
atlas = ExtResource("2_pj0d2")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tlsu"]
atlas = ExtResource("2_pj0d2")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_swjnw"]
atlas = ExtResource("2_pj0d2")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjmfh"]
atlas = ExtResource("2_pj0d2")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7jap"]
atlas = ExtResource("2_pj0d2")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg3xv"]
atlas = ExtResource("2_pj0d2")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwt7i"]
atlas = ExtResource("2_pj0d2")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q47j4"]
atlas = ExtResource("2_pj0d2")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d3j1"]
atlas = ExtResource("2_pj0d2")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_apvf3"]
atlas = ExtResource("2_pj0d2")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvbyo"]
atlas = ExtResource("2_pj0d2")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_exsj7"]
atlas = ExtResource("2_pj0d2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3adh"]
atlas = ExtResource("2_pj0d2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvh5k"]
atlas = ExtResource("2_pj0d2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_byffv"]
atlas = ExtResource("2_pj0d2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jfog"]
atlas = ExtResource("2_pj0d2")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbc5g"]
atlas = ExtResource("2_pj0d2")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_wmuph"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2inh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbbjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uchj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urrqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orve7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx7rf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmuph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irxc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bid1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaplb")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4rth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hheg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_300dh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iccfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tjhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbkbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80ksq")
}],
"loop": true,
"name": &"die",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tlsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swjnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjmfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7jap")
}],
"loop": true,
"name": &"hit",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg3xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwt7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q47j4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d3j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apvf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvbyo")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exsj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3adh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvh5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byffv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jfog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbc5g")
}],
"loop": true,
"name": &"run",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_irxc3"]
size = Vector2(54, 50)

[sub_resource type="Animation" id="Animation_m2inh"]
resource_name = "attack"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.56667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_attack_animation_finished"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyAttack/CollisionShapeSigma:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EnemyAttack")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.6, 1.26667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"start_attack"
}, {
"args": [],
"method": &"end_attack"
}]
}

[sub_resource type="Animation" id="Animation_1uchj"]
resource_name = "die"
length = 1.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyAttack/CollisionShapeSigma:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.73333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_die_animation_finished"
}]
}

[sub_resource type="Animation" id="Animation_mbbjy"]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyAttack/CollisionShapeSigma:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.3, 0.6),
"transitions": PackedFloat32Array(0.509824, 2, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.566667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_hit_animation_finished"
}]
}

[sub_resource type="Animation" id="Animation_obysg"]
resource_name = "idle"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyAttack/CollisionShapeSigma:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pj0d2"]
resource_name = "run"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_urrqu"]
_data = {
&"attack": SubResource("Animation_m2inh"),
&"die": SubResource("Animation_1uchj"),
&"hit": SubResource("Animation_mbbjy"),
&"idle": SubResource("Animation_obysg"),
&"run": SubResource("Animation_pj0d2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pj0d2"]
size = Vector2(92, 65.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oaplb"]
radius = 26.0
height = 420.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b4rth"]
radius = 25.0
height = 92.0

[node name="TrashMonster" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_qsv2k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.38419e-07, -28)
scale = Vector2(1.53323, 1.65052)
sprite_frames = SubResource("SpriteFrames_wmuph")
animation = &"attack"
autoplay = "idle"
frame_progress = 0.906761

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_irxc3")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_urrqu")
}

[node name="DropSpot" type="Marker2D" parent="."]
position = Vector2(0, -12)

[node name="EnemyAttack" parent="." instance=ExtResource("3_m2inh")]
collision_layer = 3
damage = 5

[node name="CollisionShapeSigma" type="CollisionShape2D" parent="EnemyAttack"]
position = Vector2(0, -32.75)
shape = SubResource("RectangleShape2D_pj0d2")
disabled = true

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-1, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_oaplb")

[node name="AttackArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(1, -25)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_b4rth")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8

[node name="HPBar" type="Node2D" parent="."]

[node name="hpbar_right" type="TextureProgressBar" parent="HPBar"]
custom_minimum_size = Vector2(40, 4)
offset_left = -24.0
offset_top = -65.0
offset_right = 326.0
offset_bottom = -35.0
scale = Vector2(0.139998, 0.141999)
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("4_mbbjy")
texture_progress = ExtResource("5_1uchj")
metadata/_edit_use_anchors_ = true

[node name="hpbar_left" type="TextureProgressBar" parent="HPBar"]
visible = false
custom_minimum_size = Vector2(20, 2)
offset_left = -25.0
offset_top = -65.0
offset_right = 325.0
offset_bottom = -35.0
scale = Vector2(0.14, 0.142)
value = 100.0
fill_mode = 1
nine_patch_stretch = true
texture_under = ExtResource("6_urrqu")
texture_progress = ExtResource("7_orve7")

[node name="Label" type="Label" parent="HPBar"]
visible = false
offset_left = -17.0
offset_top = -74.0
offset_right = 153.0
offset_bottom = -2.0
scale = Vector2(0.199996, 0.12)
theme_override_fonts/font = ExtResource("8_yx7rf")
theme_override_font_sizes/font_size = 60
text = "Dodged!"
